# money-market-contracts

contracts/market/src/: borrow.rs  contract.rs  deposit.rs  migration.rs  state.rs
contracts/market/src/testing/: deposit_ut.rs  tests.rs
contracts/overseer/src/: contract.rs
contracts/vterra/: Cargo.toml
contracts/vterra/src/: bonding.rs  contract.rs
contracts/vterra/src/testing/: integration.rs  mod.rs
