[package]
name = "vterra"
version = "0.0.0"
authors = ["Terraform Labs, PTE."]
edition = "2018"
description = "Handles vUST"
license = "MIT"

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for quicker testing, cargo test --lib
# for more explicit testing, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
moneymarket = { path = "../../packages/moneymarket", default-features = false, version = "0.3.1"}
anchor-token = "0.2.0"
cw20 = "0.8.0"
protobuf = { version = "2", features = ["with-bytes"] }
cosmwasm-bignumber = "2.2.0"
cosmwasm-std = "=0.16.2"
cosmwasm-storage = { version = "0.16.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = "1.0.2"
terraswap = "2.3.0"

[dev-dependencies]
cosmwasm-schema = "0.16.0"
terra-cosmwasm = "2.2.0"
terra-multi-test = { git = "https://github.com/astroport-fi/terra-plus.git", tag = "v0.9.1-terra" }
vterra = { path = "./" }
moneymarket-old = { git = "https://github.com/Anchor-Protocol/money-market-contracts.git", branch = "dev/vUST" }
moneymarket-market-old = { git = "https://github.com/Anchor-Protocol/money-market-contracts.git", branch = "dev/vUST" }
moneymarket-overseer-old = { git = "https://github.com/Anchor-Protocol/money-market-contracts.git", branch = "dev/vUST" }
moneymarket-oracle-old = { git = "https://github.com/Anchor-Protocol/money-market-contracts.git", branch = "dev/vUST" }
moneymarket-interest-model-old = { git = "https://github.com/Anchor-Protocol/money-market-contracts.git", branch = "dev/vUST" }
moneymarket-distribution-model-old = { git = "https://github.com/Anchor-Protocol/money-market-contracts.git", branch = "dev/vUST" }
cw20-base = { version = "0.8", features = ["library"] }
moneymarket-market = { path = "../market" }
moneymarket-overseer = { path = "../overseer" }

[profile.dev]
overflow-checks = true
